sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:8: error: not found: value isBigger
      if(isBigger(i-1,i)){
         ^AlgInsertionSort:13: error: not found: value v
    setValue(lastValue, v);
                        ^